# fear-Allah

./: .gitignore  ARCHITECTURE.md  README.md  RESET.md  admin_login_correct.json  alembic-output.txt  bootstrap.ps1  conftest.py  dev.db  docker-compose.local.yml  docker-compose.override.yml  docker-compose.vps-ports.yml  docker-compose.yml  e2e-job.yaml  fear-Allah.code-workspace  fearallah.dump  kind-config.yaml  kubeconfig.b64  local.db  ngrok-backend.yml  ngrok-frontend-only.yml  ngrok-staging.yml  patch.json  phase6_dm.json  phase6_login.json  phase6_login2.json  phase6_msg.json  phase6_user1.json  playwright.config.js  playwright.config.ts  pytest.ini  run-staging.ps1  sidra-admin.conf  sidra-ca.crt  smoketest.ps1  test_concurrency.db  test_recipe.json  test_upload.txt  tmp_admin_query.py  tmp_db_query.py
backend/: Dockerfile  alembic.ini  backend_test.db  conftest.py  pyproject.toml  pytest.ini  requirements.txt  tmp_select_orders.py
backend/Activate.ps1/: pyvenv.cfg
backend/alembic/: env.py  script.py.mako
backend/app/: main.py
backend/scripts/: _tmp_find_assemble_task.py  _tmp_find_assignments.py  _tmp_login_get_token.py  _tmp_print_form_orders.py  _tmp_run_create_order.py  _tmp_verify_endpoints.py  add_team_members.py  backfill_assignments.py  check_operational_roles.py  check_teams.py  dev-entrypoint.sh  e2e_extended.py  e2e_test.py  migrate_legacy_dms.py  reset-entrypoint.sh  reset_admin.py  reset_admin_pw.py  reset_db.py  reset_user_pw.py  run_migrations.sh  seed_demo_data.py  seed_staging.py  seed_test_scenarios.py  smoke.sh  test_batch_processing.py  (+2 more)
(+496 files in other folders)
